# todolist_app

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose-ci.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  superuser
.github/workflows/: action.yaml  actions.yaml
bot/: models.py  serializers.py  urls.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py  0002_alter_tguser_chat_id_alter_tguser_username_and_more.py
bot/tg/: client.py
bot/tg/fsm/: memory_storage.py
core/: admin.py  serializer.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_last_name.py  0003_remove_user_name_alter_user_last_name.py  0004_alter_user_last_name.py  0005_alter_user_first_name.py  0006_alter_user_first_name_alter_user_last_name.py
deploy/: .env  .env_ci  .env_example  docker-compose-ci.yaml  docker-compose.yaml
goals/: admin.py  models.py  permissions.py  serializer.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_remove_goalcategory_created_and_more.py  0003_goalcategory_created_goalcategory_updated.py  0004_goal.py  0005_board_goalcomment_goalcategory_board_and_more.py  0006_create_new_objects.py  0007_alter_goalcategory_board.py  0008_alter_goalcategory_board.py  0009_alter_goalcategory_board.py
tests/: factories.py  fixtures.py
tests/core/user/: test_user.py
tests/goals/: test_board.py  test_category.py  test_comment.py  test_goals.py
todolist/: settings.py  urls.py
