[tool.poetry]
name = "todolist_app"
version = "0.1.0"
description = ""
authors = ["K-Maxim <m.karpenko96@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
django-environ = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
